fix line spacing

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -42,6 +42,9 @@ li {
       float: right;
       width: 400px;
       margin: 20px;
+      font-size: 20px;
+      line-height: 31px;
+      padding-top: 0px;
 }
 
 #notes-panel {
